# XJGARSDKDemoApp-Win64

./: README.md
XJGARFaceSDKProjectDemo-win64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  XJGArSdk.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  freeglut.lib  freeglutd.lib  glew32.lib  libVidCapInterface.cpp  libXJGARSDK.lib  libXJGARSDKTest.sln  libXJGARSDKTest.vcxproj  libXJGARSDKTest.vcxproj.filters  libXJGARSDKTest_simple.vcxproj  libXJGARSDKTest_simple.vcxproj.filters  test_XJGARSDK_freeglut.cpp  test_XJGARSDK_simple.cpp  使用说明.txt
XJGARFaceSDKProjectDemo-win64/Debug/: libXJGARSDKTest.ilk
XJGARFaceSDKProjectDemo-win64/ResForShader/: CMakeLists.txt  CMakeLists.txt.bak  cmake_install.cmake
XJGARFaceSDKProjectDemo-win64/StickerPapers/: CMakeLists.txt  cmake_install.cmake
XJGARFaceSDKProjectDemo-win64/StickerPapers/angel/: params.txt  params.txt.bak
XJGARFaceSDKProjectDemo-win64/StickerPapers/caishen/: params.txt  params.txt.bak
XJGARFaceSDKProjectDemo-win64/StickerPapers/caishentest/: params.txt
XJGARFaceSDKProjectDemo-win64/StickerPapers/cangou/: params.txt
XJGARFaceSDKProjectDemo-win64/StickerPapers/diving/: params.txt  params.txt.bak
XJGARFaceSDKProjectDemo-win64/StickerPapers/eyes/: params.txt
XJGARFaceSDKProjectDemo-win64/StickerPapers/huahuan/: params.txt
XJGARFaceSDKProjectDemo-win64/StickerPapers/leisi/: params.txt
XJGARFaceSDKProjectDemo-win64/StickerPapers/lufei/: params.txt
XJGARFaceSDKProjectDemo-win64/StickerPapers/lvhua/: params.txt
(+32 files in other folders)
